--- a/css/theme_original.css
+++ b/css/theme_original.css
@@ -56,7 +56,7 @@ body {
   -webkit-align-content: stretch;
       -ms-flex-line-pack: stretch;
           align-content: stretch;
-  background: #ececec; }
+  background: #FFFFFF; }
 
 .header {
   width: 100%;
@@ -66,7 +66,7 @@ body {
   position: fixed;
   font-size: 20px;
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 2px 9px 1px rgba(0, 0, 0, 0.12), 0 4px 2px -2px rgba(0, 0, 0, 0.2);
-  padding: 16px 16px 0 16px;
+  padding: 5px;
   will-change: transform;
   display: -webkit-box;
   display: -webkit-flex;
@@ -96,10 +96,16 @@ body {
   transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
   transition: transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s, -webkit-transform 0.233s cubic-bezier(0, 0, 0.21, 1) 0.1s;
   z-index: 1000; }
+  .header .logo img{
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+  }
   .header .headerButton {
     width: 24px;
     height: 24px;
     margin-right: 16px;
+    margin-top: 13px;
     text-indent: -30000px;
     overflow: hidden;
     opacity: 0.54;
