--- a/css/theme_original.css
+++ b/css/theme_original.css
@@ -170,7 +170,21 @@ input[type=search]:focus {
   width: 100%;
   height: auto;
   border-radius: 5px;
+  box-shadow: 1px 1px 5px 0 #000;
 
+}
+.google-maps {
+    position: relative;
+    padding-bottom: 75%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
+}
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 /* EOF CSS YELLOW TEAM */
@@ -251,25 +265,15 @@ input[type=search]:focus {
 }
 
 .btnRetour{
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  border: none;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
-  color: #FFFFFF;
   position: fixed;
-  cursor: pointer;
-  bottom: 80%;
-  right: 80%;
-  margin:25px;
-  overflow: hidden;
-  backface-visibility: hidden;
-  justify-content: center;
-  display: flex;
-  background: url(/images/ic_refresh_white_24px.svg) center center no-repeat #000000;
-  padding: 5%;
+  color: white;
+  padding: 10px;
   z-index: 3;
-  text-indent: -4000px;
+  background: #333;
+  border: none;
+  padding: 10px 13px;
+  border-radius: 50%;
+  opacity: 0.9;
 }
 .dialog-container {
   background: rgba(0, 0, 0, 0.57);
