--- a/css/theme_original.css
+++ b/css/theme_original.css
@@ -15,7 +15,8 @@
  */
 
 * {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline:none }
 
 html, body {
   padding: 0;
@@ -384,3 +385,8 @@ input[type=search]:focus {
   .mdl-button--primary.mdl-button--primary.mdl-button--raised, .mdl-button--primary.mdl-button--primary.mdl-button--fab {
     color: white;
     background-color: #3f51b5; }
+
+    a, a:active, a:focus,
+    button {
+    outline: none!important;
+    }    
